--- a/config/st_gcn/ntu-xview/train.yaml
+++ b/config/st_gcn/ntu-xview/train.yaml
@@ -3,17 +3,17 @@ work_dir: ./work_dir/recognition/ntu-xview/ST_GCN
 # feeder
 feeder: feeder.feeder.Feeder
 train_feeder_args:
-  data_path: ./data/NTU-RGB-D/xview/train_data.npy
-  label_path: ./data/NTU-RGB-D/xview/train_label.pkl
+  data_path: /content/gdrive/MyDrive/xview/train_data.npy
+  label_path: /content/gdrive/MyDrive/xview/train_label.pkl
 test_feeder_args:
-  data_path: ./data/NTU-RGB-D/xview/val_data.npy
-  label_path: ./data/NTU-RGB-D/xview/val_label.pkl
+  data_path: /content/gdrive/MyDrive/xview/val_data.npy
+  label_path: /content/gdrive/MyDrive/xview/val_label.pkl
 
 # model
 model: net.st_gcn.Model
 model_args:
   in_channels: 3
-  num_class: 60
+  num_class: 7
   dropout: 0.5
   edge_importance_weighting: True
   graph_args:
@@ -21,15 +21,15 @@ model_args:
     strategy: 'spatial'
 
 #optim
-weight_decay: 0.0001
+weight_decay: 0.1
 base_lr: 0.1
 step: [10, 50]
 
 # training
 device: [0,1,2,3]
 batch_size: 64 
-test_batch_size: 64
-num_epoch: 80
+test_batch_size: 2
+num_epoch: 1
 
 
 
