--- a/config/st_gcn.twostream/ntu-xview/train.yaml
+++ b/config/st_gcn.twostream/ntu-xview/train.yaml
@@ -3,11 +3,11 @@ work_dir: ./work_dir/recognition/ntu-xview/ST_GCN_TWO_STREAM
 # feeder
 feeder: feeder.feeder.Feeder
 train_feeder_args:
-  data_path: ./data/NTU-RGB-D/xview/train_data.npy
-  label_path: ./data/NTU-RGB-D/xview/train_label.pkl
+  data_path: /content/gdrive/MyDrive/xview/train_data.npy
+  label_path: /content/gdrive/MyDrive/xview/train_label.pkl
 test_feeder_args:
-  data_path: ./data/NTU-RGB-D/xview/val_data.npy
-  label_path: ./data/NTU-RGB-D/xview/val_label.pkl
+  data_path: /content/gdrive/MyDrive/xview/val_data.npy
+  label_path: /content/gdrive/MyDrive/xview/val_label.pkl
 
 # model
 model: net.st_gcn_twostream.Model
